@@ -11,7 +11,7 @@ $(function (){
     $.vmodel.get("content_7_1", true, function (){
         var result = $.vmodel.history('content_7_1');
         if (result.vname == "content_7_1" && result.status == true) {
-            console.log('7-1: OK');
+            console.log('7-1');
         } 
     });
 
@@ -26,7 +26,7 @@ $(function (){
     $.vmodel.get("content_7_2", true, function (){
         var result = $.vmodel.history('content_7_2');
         if (result.vname == "content_7_2" && result.status == true) {
-            console.log('7-2: OK');
+            console.log('7-2');
         } 
     });
 
@@ -40,7 +40,7 @@ $(function (){
     $.vmodel.get("window", true, function (){
         var result = $.vmodel.history('window');
         if (result.vname == "window" && result.status == true) {
-            console.log('7-3: OK');
+            console.log('7-3');
         }
     });
 
@@ -54,7 +54,8 @@ $(function (){
     $.vmodel.get("document", true, function (){
         var result = $.vmodel.history('document');
         if (result.vname == "document" && result.status == true) {
-            console.log('7-4: OK');
+            console.log('7-4');
+            console.log('7: OK');
         }
     });
     
