@@ -7,13 +7,13 @@
 <body>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="../src/jquery.vmodel.js"></script>
-<!--     <script src="01.js"></script> -->
-<!--     <script src="02.js"></script> -->
-<!--     <script src="03.js"></script> -->
-<!--     <script src="04.js"></script> -->
-<!--     <script src="05.js"></script> -->
-<!--     <script src="06.js"></script> -->
-<!--     <script src="07.js"></script> -->
+    <!-- <script src="01.js"></script> -->
+    <!-- <script src="02.js"></script> -->
+    <!-- <script src="03.js"></script> -->
+    <!-- <script src="04.js"></script> -->
+    <!-- <script src="05.js"></script> -->
+    <!-- <script src="06.js"></script> -->
+    <!-- <script src="07.js"></script> -->
     <!-- <script src="08.js"></script> -->
     <script src="09.js"></script>
     <div class="content">
